--- a/gog.org
+++ b/gog.org
@@ -1372,7 +1372,7 @@ Grav and Gog were faced with spending the night, baring a miracle, in the most d
 
 This was part of the life-long education the men had about lizard-birds.  The woods were safer but not safe. It also was the only reasonable choice with a lizard-bird in the area, most of all at night.
 
-This was definitely toward the end of the curriculum, but they both knew the approximate odds of either choice, and chose the least bad: They would be spending the night on the edge of Small Woods, somehow or other.
+This was definitely toward the end of the curriculum, but they both knew the approximate odds of either choice and chose the least bad: They would be spending the night on the edge of Small Woods, somehow or other.
 
 The forest-child stood and stared at the two who were both lost in thought.
 
@@ -1390,27 +1390,27 @@ They followed the stinking baby at a right angle to the trail. As mentioned, for
 
 In the growth strata of most jungle or woods, there was a fairly consistently unoccupied bit of vertical real estate near the floor.
 
-There were juicy, mostly edible or at least useful ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-height for an adult Crec.
+There were juicy, mostly edible or at least useful ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple height for an adult Crec.
 
 But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above. This is a good thing as this was also the first strata featuring wide use of spines and poisons.
 
 For the men, this meant a walk through thick, chest-high bush that was all painful or uncomfortable in some way or other. In addition to the irritable plant life, not a few cantankerously deadly fauna lived in this layer too. This was the whole reason for established paths after all!
 
-A Crec ecology text book could easily have used a picture of this bit of woods to illustrate these concepts.
+A Crec ecology textbook could easily have used a picture of this bit of woods to illustrate these concepts.
 
-The men, their spears now being employed as brush clearing blades[fn:: They did have great knives of bronze capable for example stabbing a person clean through or slicing off a thumb, but as the spines and tougher leaves employed a lot of silica, the edge was quickly warn. Also if clearing a one-time path through the woods involves a lot of cutting, you're doing it wrong.], at which they were barely more useful than any other stick, were swatting away face-sized, fat spiders; small, green vipers; and the occasional poisonous frog or centipede[fn:: And the pretenders of these, who they could immediately identify as harmless, even at this pace, and would try not to wantonly kill.]. The brush was a secondary concern here. They had to compromise comfort to a degree, given the more important preservation of life.
+The men, their spears now being employed as brush clearing blades[fn:: They did have great knives of bronze capable for example stabbing a person clean through or slicing off a thumb, but as the spines and tougher leaves employed a lot of silica, the edge was quickly worn. Also if clearing a one-time path through the woods involves a lot of cutting, you're doing it wrong.], at which they were barely more useful than any other stick, were swatting away face-sized, fat spiders; small, green vipers; and the occasional poisonous frog or centipede[fn:: And the pretenders of these, who they could immediately identify as harmless, even at this pace, and would try not to wantonly kill.]. The brush was a secondary concern here. They had to compromise comfort to a degree, given the more important preservation of life.
 
-Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop", with a spray of spider guts. The men would sometimes try to get the each other with a shower of spider guts, using an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
+Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop", with a spray of spider guts. The men would sometimes try to get each other with a shower of spider guts, using an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
 
 It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby was having no trouble at all. He was currently dragging his long spear behind him, his hand around its tip, his thumb checking the point for sharpness at intervals[fn:: This is a nervous habit that is frowned upon by the Crec. They call it 'worrying your point' and it's used metaphorically to mean 'getting worked up over nothing'. This /will/ dull a fire-hardened spear point on the scale of days.].
 
 Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuated with rhythmic coos, mummers, and occasionally a delighted squeal. This did nothing to take away from the uncanniness of this swaggering baby.
 
-It was getting dark, but was not yet killing-palm. The forest-child seemed unbothered, and was now making occasional tight turns, as though the party had switched to surface streets and was almost home. There seemed to be a /destination/ coming up.
+It was getting dark but was not yet killing-palm. The forest-child seemed unbothered and was now making occasional tight turns, as though the party had switched to surface streets and was almost home. There seemed to be a /destination/ coming up.
 
-Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not natural in origin, but was just as clearly very old.
+Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not natural in origin but was just as clearly very old.
 
-It was made out of stone that had been squared. The stones were entirely faceted with flat surfaces cut to meet those of adjoining stones. The patterns made by these joints on the outer walls were irregular. The walls were none the less very flat both inside and out.
+It was made out of stone that had been squared. The stones were entirely faceted with flat surfaces cut to meet those of adjoining stones. The patterns made by these joints on the outer walls were irregular. The walls were nonetheless very flat both inside and out.
 
 Any roundness found in the stones appeared to be from erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
 
@@ -1420,7 +1420,7 @@ The joints between the stones did not make a regular, geometric pattern like one
 
 The Crec did not have a word for this shape. It was a nearly perfect cube.
 
-They had surely traveled four palm off the established trail to get here and it was in an anonymous looking, not terribly useful part of Small Woods. Neither had seen nor heard of anything like this, but would be sure to ask around. Maybe /others/ had been seen, if not this one. Any cavepeople capable of creating this would surely have had no trouble building many more.
+They had surely traveled four palm off the established trail to get here and it was in an anonymous-looking, not terribly useful part of Small Woods. Neither had seen nor heard of anything like this but would be sure to ask around. Maybe /others/ had been seen, if not this one. Any cavepeople capable of creating this would surely have had no trouble building many more.
 
 It was an astonishing structure, mostly in the seemingly wasted time that must have gone into making it so /perfect/.
 
@@ -1432,7 +1432,7 @@ There was a low, two man long sort of arched hallway made from woven and somewha
 
 This is a contrivance that the men were familiar with. Something like this was used sometimes to protect the opening of a cave from anything big enough to be a threat to humans.
 
-Looking inward, one's eyes were met by the tips of many, usually all-finger all-finger or more fire-hardened points made from fist-diameter, half man long saplings chosen for their stiffness, making entrance impossible for a crazed predator but still allowing a human to enter, patiently move spikes out of the way, using arms and legs to retain the ones already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
+Looking inward, one's eyes were met by the tips of many, usually all-finger all-finger or more fire-hardened points made from fist-diameter, half-man long saplings chosen for their stiffness, making entrance impossible for a crazed predator but still allowing a human to enter, patiently move spikes out of the way, using arms and legs to retain the ones already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
 
 This was referred to in standard Crecspeak as a spear-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
 
@@ -1440,19 +1440,19 @@ A typical Crec spear-guard had all sorts of clever latches and vine catches that
 
 The baby gave them exasperated but patient looks as he stopped repeatedly to press back some of the more troublesome spears at their base and wait for the two enormous people to ease past all their "pain points".
 
-This was a hide that the forest-child somehow knew about in advance. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There would be a lizard-bird hunting this night along the nearby plains[fn:: This was just another night to the lizard-bird, but they were so rare to the Crec as daily experiences go they hadn't really anticipated this particular problem, really. Caveman Thag would have been disappointed.].
+This was a hide that the forest-child somehow knew about in advance. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There would be a lizard-bird hunting this night along the nearby plains[fn:: This was just another night to the lizard-bird, but they were so rare to the Crec as daily experiences go they hadn't anticipated this particular problem, really. Caveman Thag would have been disappointed.].
 
 One might ask, "Hey, why not build the hide on the plains where it's safer?" This is because 1. Both the Crec and the forest-children would be hopeless at building something particularly /like/ this, 2. The plains aren't exactly a safe place to bivouac, unless far away from any patch of woodsy Forest, and then only with some strict protocols, and never alone, and 3. Once on the ground, fending off a lizard-bird trying to get into the hide would be no different from the things they would encounter in the woods, and odds were good the lizard-bird would find them, even in a stone hide.
 
 And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extinction. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
 
-For them it would be a kind of entertainment.
+For them, it would be a kind of entertainment.
 
 They both noted how some of the living vine of the portico was grown soundly into the stone of the hide. Anything that wanted in, short of an ambling-feast, would need to use the door, which was well protected, as described.
 
 They looked around as best they could in the dark hide. Gog was rustling through his kit, trying to get the ingredients necessary for light.
 
-Soon Gog was making a noise and a sight that instantly got the attention of the other two. In the complete dark of the hide there was a bright flash accompanied by a click. Then another. Under normal circumstances Grav would be taunting Gog about his fire-making skills, but this time he was wishing him nothing but quick success.
+Soon Gog was making a noise and a sight that instantly got the attention of the other two. In the complete dark of the hide there was a bright flash accompanied by a click. Then another. Under normal circumstances, Grav would be taunting Gog about his fire-making skills, but this time he was wishing him nothing but quick success.
 
 After all-finger or so clicks, there was a blue flash and then a growing flame of warm yellow.
 
@@ -1460,21 +1460,21 @@ Gog was holding an unfired clay oil lamp with a small, bright, efficient flame a
 
 This was a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. The finish itself was thick enough to provide some impact protection, which is a big concern for the fragile things you drag around the Forest with you always. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel. Old lamps gave off a distinct comforting smell; grandma, warm fires, salad days.
 
-For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you obtained it from acquired it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be obtained in completely different ways: Maybe you're a modern stock broker. Maybe you mine gems with your bare hands.
+For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you obtained it from acquired it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be obtained in completely different ways: Maybe you're a modern stockbroker. Maybe you mine gems with your bare hands.
 
-Of course they had the nicest oil. It also happened to be rather a cheap one as luck would have it. Most considered its smell to be a down side. They thought just the opposite. The lightly refined turpentine[fn:: More or less.] they preferred burned predictably, gave little smoke, had a bright, well-colored flame, and smelled to them like an exhausting day productively working with lumber. It was a nice, crafty kind of smell.
+Of course, they had the nicest oil. It also happened to be rather a cheap one as luck would have it. Most considered its smell to be a downside. They thought just the opposite. The lightly refined turpentine[fn:: More or less.] they preferred burned predictably, gave little smoke, had a bright, well-colored flame, and smelled to them like an exhausting day productively working with lumber. It was a nice, crafty kind of smell.
 
 The worst part of the night, they were sure, was going to be sharing a small burrow with a reeking baby who also happened to be a very poor conversationalist.
 
-In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. All you needed was a rich uncle willing to let you sift through his garbage. Somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful, but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.] and a few millipedes that one would not want to touch[fn:: Nothing capable of spraying or snipping off a finger.].
+In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. All you needed was a rich uncle willing to let you sift through his garbage. Somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.] and a few millipedes that one would not want to touch[fn:: Nothing capable of spraying or snipping off a finger.].
 
 And right in the middle was a pile of burnt bones and cold coals. This was as expected. Though out of the way, this completely sheltered hide would surely have occasional visitors such as themselves, and it was apparently known to the forest-children.
 
 Having gotten snugly into their hide-burrow and it now being properly dark, as best they could tell in the dark wood, Grav and Gog talked at length about their predicament and plans.
 
-For one, they would have to awake and get running dangerously early in order too beat conch. They would get one lash each for not having shaved[fn:: Performed with a purpose-made shard of obsidian and of course some lathery soap.] and not wearing their rhino-calf training armor, which they could retrieve, but not in time to beat conch.
+For one, they would have to awake and get running dangerously early to beat conch. They would get one lash each for not having shaved[fn:: Performed with a purpose-made shard of obsidian and of course some lathery soap.] and not wearing their rhino-calf training armor, which they could retrieve, but not in time to beat conch.
 
-Missing conch would mean first getting all-finger lashes, then attending CO lectures regarding obedience, duty and pain, and then finally performing all training exercises that had been scheduled for them that day alone and unsupervised[fn:: The penalty for any kind of shirking was death, so supervision was generally was not required.] likely until palm past the usual first-night bedtime. This of course resulted in occasional deaths, so it was a kind of 'death penalty lite'.
+Missing conch would mean first getting all-finger lashes, then attending CO lectures regarding obedience, duty, and pain, and then finally performing all training exercises that had been scheduled for them that day alone and unsupervised[fn:: The penalty for any kind of shirking was death, so supervision was generally was not required.] likely until palm past the usual first-night bedtime. This of course resulted in occasional deaths, so it was a kind of 'death penalty lite'.
 
 The last palm of woods would not be entirely quiet at that time, there being early-risers among predators too. They were balancing the various penalties they were facing with their reckoned odds of getting eaten by one thing or another along the way.
 
@@ -1486,7 +1486,7 @@ Grav and Gog's attention went back to the forest-baby.
 
 They had determined as best they could that his name was Oh-Mas, although Grav wondered if /one's name/ meant the same thing to the baby as it did to them.
 
-He had an idea that, /yes/, they had names, /of a sort/, but /it was complicated/. Just as the instincts that forest-children have about language in general could be leveraged to get their attention, similarly did Oh-Mas' constant chattering give the impression that there was 'a lot going on there'.
+He had an idea that, /yes/, they had names, /of a sort/, but /it was complicated/. Just as the instincts that forest-children have about language, in general, could be leveraged to get their attention, similarly did Oh-Mas' constant chattering give the impression that there was 'a lot going on there'.
 
 Oh-Mas too was working with fire.
 
@@ -1510,7 +1510,7 @@ Grav laughed remembering how sick-monkey and randy-monkey they had become with t
 
 Oh-Mas had his pipe going by now and had filled the top half of the burrow with laminar green smoke. The appearance of the smoke alone would have been a warning to more experienced reflect-soul-trekkers.
 
-Without ceremony, Gog grabbed the pipe from the baby. For an instant Oh-Mas made a very baby-like "whaa!" which he clipped sharply. His face returned to its friendly resting state and he made a pantomimed two handed "release" of the pipe with a smile, though it had already been taken from him.
+Without ceremony, Gog grabbed the pipe from the baby. For an instant, Oh-Mas made a very baby-like "whaa!" which he clipped sharply. His face returned to its friendly resting state and he made a pantomimed two-handed "release" of the pipe with a smile, though it had already been taken from him.
 
 Neither man ever mistook Oh-Mas for an actual baby again. This was clearly only his 'appearance'. Sometimes there was a restrained civility in the forest-child that made the men wonder if he was always in control of himself.
 
@@ -1526,13 +1526,13 @@ This put both men's heads squarely in the ash heap of the dead fire pit. They di
 
 They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to".
 
-Grav immediately felt the frustration of an interesting dream slipping away as the tried to recall what they had been talking about, and as with his dreams it seemed like the memories were actively running away from him. He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
+Grav immediately felt the frustration of an interesting dream slipping away as he tried to recall what they had been talking about, and as with his dreams, it seemed like the memories were actively running away from him. He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
 
 The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, spear at the ready, and a more or less normal, though very slow and very loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
 
 They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thickness at the least. The claw, whoever's claw, was at least that long.
 
-And it belonged to an animal smart enough to start work immediately on tearing the spear-guard away from the hide altogether, which for an averaged sized male cat would mean sure death for them, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
+And it belonged to an animal smart enough to start work immediately on tearing the spear-guard away from the hide altogether, which for an average sized male cat would mean sure death for them, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
 
 The gaps between the vine provided enough space for Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
 
@@ -1548,11 +1548,11 @@ Grav and Gog could now clearly see the mad beast at the end of the tunnel, the a
 
 Whatever the danger, the two men were captivated.
 
-The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
+The cat's fangs looked like polished tin and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
 
 Its "whiskers" were about the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them that seemed to refract the starlight, there suddenly seeming to be no moon or clouds, but only Unnaturally intense starlight. The stars felt /closer/ more than brighter.
 
-His coat was shades of orange, yellow and black that, as with a lot of these colors, they could not really describe other than to say 'glowing', even the black. The fur seemed to shimmer and flow not with wind but with each of his movements. For some reason, they could not imagine there being any wind out there.
+His coat was shades of orange, yellow, and black that, as with a lot of these colors, they could not really describe other than to say 'glowing', even the black. The fur seemed to shimmer and flow not with wind but with each of his movements. For some reason, they could not imagine there being any wind out there.
 
 His coat seemed like an eternal windswept prairie of glowing colors.
 
@@ -1572,23 +1572,23 @@ Crazed, the baby grabbed the only lit lamp and smartly slung it hard, connecting
 
 This roused the men, both of whom scrambled together in Grav's kit to get his lamp. Gog found it first and Grav hurriedly lit some dry litter from the hide's stone floor with embers from Oh-Mas' pipe, which he set to glowing with a few puffs of breath beforehand.
 
-With a heavier dried leaf from this he finally lit his lamp. Looking up he realized that light availability was not a problem for the time being.
+With a heavier dried leaf from this, he finally lit his lamp. Looking up he realized that light availability was not a problem for the time being.
 
-The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades made of fire. The liquid ran down his back, over his flanks and also down the outside of its front legs. And the flame followed.
+The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades made of fire. The liquid ran down his back, over his flanks, and also down the outside of its front legs. And the flame followed.
 
 The cat spent a few drop-stone seemingly calmed by the fire. It was pacing in a circle as if thinking of lying down.
 
 But then the cat snapped.
 
-It charged the opening, propelling its whole body with hind legs and making synchronized swats with both fore limbs, claws extended. The cat was doing a sort of wheelie, propping up the front half of its body with accelerating rage.
+It charged the opening, propelling its whole body with hind legs and making synchronized swats with both forelimbs, claws extended. The cat was doing a sort of wheelie, propping up the front half of its body with accelerating rage.
 
 It's swatting, almost clapping, but with paws not quite meeting, got more rapid as he approached[fn:: This can be seen in modern domesticated casts. It's known to some as 'fuck your shit up mode'.].
 
-All of this was accompanied by a sound that caused physical pain in their ears, a twinge of which they would feel the next day. Notes of this could be felt distinctly one's rib cage.
+All of this was accompanied by a sound that caused physical pain in their ears, a twinge of which they would feel the next day. Notes of this could be felt distinctly in one's rib cage.
 
 So long as it stayed where it was, all was safe.
 
-Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cats fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black pupils.
+Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cat's fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black pupils.
 
 On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky about which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
 
@@ -1596,7 +1596,7 @@ If the sky is clear, you could see the great-river-bottom[fn:: The Milky Way] fr
 
 One of these high-night-ghosts[fn:: Nebulae] was a kind of swirl shape, though one seen at an angle[fn:: Andromeda.] It had been given the name 'Ender's-Sink'.
 
-A more relatable example to most Crec would be the appearance of a whirlpool going down a natural sink, especially when different kinds of flowering duckweed and floating debris gives it some character and shows its "arms".
+A more relatable example to most Crec would be the appearance of a whirlpool going down a natural sink, especially when different kinds of flowering duckweed and floating debris give it some character and shows its "arms".
 
 The tooth-cat had eyes made of impossible colors that swirled down the drains of its eyes.
 
@@ -1607,14 +1607,14 @@ The cat took on an otherworldly character. The men could sense a kind of phase c
 It spoke. I didn't speak using a voice, but it was clear to them just the same. Its words just /were/.
 
 #+begin_quote
-Do I not suffer too? Behold my fury and my might. Like you I must eat to live. I am mortal. To kill /you/ without mercy is as wrong to me as it is for you to do such to a marmot. You have broken The Order, wise ape.
+Do I not suffer too? Behold my fury and my might. Like you, I must eat to live. I am mortal. To kill /you/ without mercy is as wrong to me as it is for you to do such to a marmot. You have broken The Order, wise ape.
 #+end_quote
 
 "He's talking.", said Grav.
 
 "No he's not.", Gog whispered as he continued to stare.
 
-Both stunned by the unreality of what was happening, they watched the enormous animal do a graceful turn-about that seemed to happen in slow motion, with the beast looking over it's muscular shoulder as he turned.
+Both stunned by the unreality of what was happening, they watched the enormous animal do a graceful turn-about that seemed to happen in slow motion, with the beast looking over its muscular shoulder as he turned.
 
 #+begin_quote
 This isn't over.
@@ -1632,7 +1632,7 @@ He turned to the men and made a "Hummmphf!" that conveyed annoyance more than re
 
 # do we want/need some kind of separator here. It's a new day...
 
-The next morning had the unfortunate bleary, "all too real" feeling of a night having been overdone, as if reality did in fact have an anchor and this is what finding a new anchorage felt like.
+The next morning had the unfortunate bleary, "all too real" feeling of a night having been overdone as if reality did in fact have an anchor and this is what finding a new anchorage felt like.
 
 The unmistakable scent of barbecued game wafted in the air outside. It had the /smell/ of an epic last-night.
 
